--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.4",
-    "nodemon": "^2.0.2"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
+    "rotating-file-stream": "^2.0.1"
   }
 }
