adding debug module

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export NODE_CONFIG_DIR=part2_express/config && export PORT=4320 && ./node_modules/.bin/nodemon part2_express"
+    "dev": "NODE_CONFIG_DIR=part2_express/config PORT=4320 DEBUG=APP:* nodemon part2_express",
+    "prod": "NODE_CONFIG_DIR=part2_express/config NODE_ENV=production nodemon part2_express",
+    "start": "npm run dev"
   },
   "author": "Mohamed Youssef",
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "config": "^3.2.4",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "lodash": "^4.17.15",
