--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "config": "^3.2.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-react-views": "^0.11.0",
     "helmet": "^3.21.2",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.4",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "rotating-file-stream": "^2.0.1"
   }
 }
