--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_CONFIG_DIR=part2_express/config PORT=4320 DEBUG=APP:* nodemon part2_express",
+    "dev": "NODE_CONFIG_DIR=part2_express/config PORT=4320 DEBUG=APP:*,express:* nodemon part2_express",
     "prod": "NODE_CONFIG_DIR=part2_express/config NODE_ENV=production nodemon part2_express",
     "start": "npm run dev"
   },
