--- a/package.json
+++ b/package.json
@@ -27,5 +27,13 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rotating-file-stream": "^2.0.1"
+  },
+  "devDependencies": {
+    "apidoc": "^0.20.1"
+  },
+  "apidoc": {
+    "name": "Project Docs",
+    "version": "0.1.0",
+    "description": "apiDoc"
   }
 }
